--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: embedded-library usr/lib/libcuda.so.#VERSION#: libm
+[i386]: embedded-library #LIBDIR#/libcuda.so.#VERSION#: libm
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 unstripped-binary-or-object
