--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 binary-has-unneeded-section
-[i386]: embedded-library usr/lib/libnvidia-compiler.so.#VERSION#: libm
+[i386]: embedded-library #LIBDIR#/libnvidia-compiler.so.#VERSION#: libm
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 [i386]: spelling-error-in-binary
