--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,5 +1,5 @@
 usr/lib/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/
-libnvidia-glcore.so.#VERSION#		usr/lib/
+libnvidia-glcore.so.#VERSION#			#LIBDIR#/
 usr/lib/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/
 usr/lib/libnvidia-tls.so.#VERSION#		#LIBDIR#/#PRIVATE#/
 usr/lib/tls/libnvidia-tls.so.#VERSION#		#LIBDIR#/#PRIVATE#/tls/
