multiarch support for libnvidia-ml1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@2419 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -519,6 +519,7 @@ Description: NVIDIA runtime compiler library (32-bit)
 
 Package: libnvcuvid1
 Architecture: i386 amd64
+Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
@@ -537,6 +538,7 @@ Description: NVIDIA CUDA nvcuvid runtime library
 
 Package: libnvidia-ml1
 Architecture: i386 amd64
+Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
