Use a versioned dependency on the transitional packages libgl{1,x}-nvidia-alternatives.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2460 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -201,8 +201,8 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
  glx-alternative-nvidia (>= 0.1.4),
- libgl1-nvidia-alternatives,
- libglx-nvidia-alternatives,
+ libgl1-nvidia-alternatives (>= 275.09.07-4),
+ libglx-nvidia-alternatives (>= 275.09.07-4),
  ${misc:Depends}
 Breaks:
  nvidia-glx${nvidia:Legacy} (<< 275.09.07-2),
