--- a/debian/rules
+++ b/debian/rules
@@ -315,7 +315,7 @@ get-orig-source:
 	rm -rf get-orig-source || true
 	mkdir get-orig-source
 	uscan --no-symlink --download-current-version --pasv \
-	    --destdir get-orig-source
+	    --watchfile debian/watch --destdir get-orig-source
 	test `ls get-orig-source/* | wc -l` = 2  # we need exactly 2 downloaded files
 	@set -e -x ; \
 	    cd get-orig-source ; \
