add a nvidia-detect package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2518 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -722,3 +722,15 @@ Description: transition libgl.so diversions to glx-alternative-nvidia
  .
  This package can be safely removed from the system once nothing depends on it.
 
+Package: nvidia-detect
+Section: non-free/x11
+Architecture: i386 amd64
+Depends:
+ pciutils,
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA GPU detection utility
+ The 'nvidia-detect' script in this package checks for an NVIDIA GPU in the
+ system and recommends one of the non-free accelerated driver meta-packages
+ (nvidia-glx, nvidia-glx-legacy-173xx or nvidia-glx-legacy-96xx) for
+ installation.
+
