add squeeze-backports instructions and a prepare-squeeze-backport target
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2526 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -323,6 +323,19 @@ pci.ids.nvidia: /usr/share/misc/pci.ids
 	done > $@
 
 
+prepare-squeeze-backport:
+	echo 8 > debian/compat
+	sed -i 	-e '/^MULTIARCH/ s/^/#/; s/yes/no/' \
+		-e '/^#BACKPORT/ s/^#//' \
+		debian/rules.defs
+	sed -i -e 's/debhelper (>= .*)/debhelper (>= 8)/' \
+	       -e '/^Multi-Arch:/ d' \
+	       -e '/multiarch-support,/ d' \
+	       debian/control
+	debchange --bpo "Disable multiarch build."
+	debchange "Reduce Build-Depends: debhelper and compat level to 8."
+
+
 .PHONY: get-orig-source
 get-orig-source:
 	rm -rf get-orig-source || true
