--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -1,6 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
+shlib-calls-exit
 
 # Packages built against the NVIDIA libGL should declare dependencies on
 # the free version for Debian's purposes.  Therefore we use a special
