--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -13,3 +13,9 @@ shlibs-declares-dependency-on-other-package libgl1-mesa-glx | libgl1
 # libraries and diverts them, so the package name won't ever be able to
 # match the library names it provides.
 package-name-doesnt-match-sonames
+
+# Ensure cleaner upgrades from some old versions to multiarch enabled
+# packages.  dpkg might want to remove this directory too early, fails to
+# do so and forgets about it, leaving it unowned on the system.
+# Targets squeeze-backports and wheezy, can be removed after wheezy release.
+package-contains-empty-directory usr/lib/tls/
