--- a/debian/control
+++ b/debian/control
@@ -724,7 +724,7 @@ Description: transition libgl.so diversions to glx-alternative-nvidia
 
 Package: nvidia-detect
 Section: non-free/x11
-Architecture: i386 amd64
+Architecture:
 Depends:
  pciutils,
  ${shlibs:Depends}, ${misc:Depends}
