don't provide xserver-xorg-video-6 in squeeze-backports, not needed there and conflicts with newer backported xorg
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2539 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -57,7 +57,7 @@ comma		 = ,
 xorg_depends	 = $(foreach abi, $(XORG_ABI_LIST), xorg-video-abi-$(abi) |)
 xorg_depends	+= $(if $(BACKPORT), xserver-xorg-core (<< 2:1.7.7) |)
 xorg_provides	 = xorg-driver-video
-xorg_provides	+= $(if $(BACKPORT), $(comma) xserver-xorg-video-6)
+xorg_provides	+= $(if $(filter-out squeeze,$(BACKPORT)), $(comma) xserver-xorg-video-6)
 
 # sanity checks
 $(if $(and $(BACKPORT),$(MULTIARCH)),$(error Oops, backports do not support multiarch.))
