call check-for-mismatching-nvidia-module properly with upstream version as argument
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2554 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1-ia32.postinst.in
+++ b/debian/libcuda1-ia32.postinst.in
@@ -7,7 +7,7 @@ then
 
 	if [ -x /usr/lib/nvidia/check-for-mismatching-nvidia-module ]
 	then
-		/usr/lib/nvidia/check-for-mismatching-nvidia-module
+		/usr/lib/nvidia/check-for-mismatching-nvidia-module #VERSION#
 	fi
 
 fi
