--- a/debian/libgl1-nvidia-glx-ia32.postinst.in
+++ b/debian/libgl1-nvidia-glx-ia32.postinst.in
@@ -13,7 +13,7 @@ if [ "$1" = "configure" ]; then
 
 	if [ -x /usr/lib/nvidia/check-for-mismatching-nvidia-module ]
 	then
-		/usr/lib/nvidia/check-for-mismatching-nvidia-module
+		/usr/lib/nvidia/check-for-mismatching-nvidia-module #VERSION#
 	fi
 
 fi
