re-enable the nvidia-detect package, needs to go through NEW
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2571 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -724,7 +724,7 @@ Description: transition libgl.so diversions to glx-alternative-nvidia
 
 Package: nvidia-detect
 Section: non-free/x11
-Architecture:
+Architecture: i386 amd64
 Depends:
  pciutils,
  ${shlibs:Depends}, ${misc:Depends}
