disable a lintian override in the backport case
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2572 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -332,6 +332,8 @@ prepare-squeeze-backport:
 	       -e '/^Multi-Arch:/ d' \
 	       -e '/multiarch-support,/ d' \
 	       debian/control
+	sed -i -e '/^package-contains-empty-directory usr\/lib\/tls\// s/^/#/' \
+		debian/libgl1-nvidia-glx.lintian-overrides.in
 	debchange --bpo "Disable multiarch build."
 	debchange "Reduce Build-Depends: debhelper and compat level to 8."
 
