--- a/debian/rules
+++ b/debian/rules
@@ -76,9 +76,12 @@ unpack-stamp: ${filename_x86} ${filename_x86_64}
 	ln -s ${dirname_x86} NVIDIA-Linux-i386
 	ln -s ${dirname_x86_64} NVIDIA-Linux-amd64
 	ln -s NVIDIA-Linux-$(DEB_HOST_ARCH) NVIDIA-Linux
-	test -f NVIDIA-Linux/README.txt || \
-		mv NVIDIA-Linux/usr/share/doc/README.txt NVIDIA-Linux/README.txt 2>/dev/null || \
-		mv NVIDIA-Linux/usr/share/doc/README NVIDIA-Linux/README.txt
+	test -f NVIDIA-Linux-i386/README.txt || \
+		mv NVIDIA-Linux-i386/usr/share/doc/README.txt NVIDIA-Linux-i386/README.txt 2>/dev/null || \
+		mv NVIDIA-Linux-i386/usr/share/doc/README NVIDIA-Linux-i386/README.txt
+	test -f NVIDIA-Linux-amd64/README.txt || \
+		mv NVIDIA-Linux-amd64/usr/share/doc/README.txt NVIDIA-Linux-amd64/README.txt 2>/dev/null || \
+		mv NVIDIA-Linux-amd64/usr/share/doc/README NVIDIA-Linux-amd64/README.txt
 	test -f NVIDIA-Linux/NVIDIA_Changelog || \
 		mv NVIDIA-Linux/usr/share/doc/NVIDIA_Changelog NVIDIA-Linux/
 	test -d NVIDIA-Linux-i386/kernel || \
