Use PCI IDs extracted from the README, not the kernel module.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2587 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -117,7 +117,7 @@ nv-readme.ids: unpack-stamp
 		exit 1 ; \
 	fi
 
-nvidia.ids: nv-kernel.ids nv-readme.ids
+nvidia.ids: nv-readme.ids
 	cp $< $@
 
 # Reformat the LICENSE to the format needed for debian/copyright.
