--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -4,8 +4,7 @@
 shopt -s compat31 nocasematch 2>/dev/null || { echo "Error: this script only works with bash." && exit; } # Avoid cryptic failure when running dash on this script
 
 # last time the PCI IDs were updated
-LATEST=$(dpkg-query -s nvidia-detect | sed -nr '/^Version:/s/Version: (.*:)?(.*)-(.*)/\2/p')
-LATEST=${LATEST:-unknown}
+LATEST="#VERSION#"
 PACKAGE=
 
 if ! (lspci --version) > /dev/null 2>&1; then
