relabel empty packages as metapackage
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/290@2656 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -575,7 +575,8 @@ Description: NVIDIA OpenCL ICD
  general-purpose parallel programming of heterogeneous systems that include
  CPUs, GPUs and other processors.
  .
- This package provides the NVIDIA installable client driver (ICD) for OpenCL.
+ This metapackage provides the NVIDIA installable client driver (ICD) for
+ OpenCL.
 
 Package: nvidia-opencl-icd-ia32
 Priority: extra
@@ -595,7 +596,7 @@ Description: NVIDIA OpenCL ICD (32-bit)
  general-purpose parallel programming of heterogeneous systems that include
  CPUs, GPUs and other processors.
  .
- This package provides the 32-bit NVIDIA installable client driver (ICD) for
+ This metapackage provides the 32-bit NVIDIA installable client driver (ICD) for
  OpenCL.
 
 Package: nvidia-libopencl1
