--- a/debian/watch.in
+++ b/debian/watch.in
@@ -1,5 +1,7 @@
 # ftp://download.nvidia.com/XFree86/Linux-x86_64/190.36/NVIDIA-Linux-x86_64-190.36-pkg2.run
 # ftp://download.nvidia.com/XFree86/Linux-x86_64/256.29/NVIDIA-Linux-x86_64-256.29.run
 version=3
+opts=dversionmangle=s/.*\.really\.$//,uversionmangle=s/^/280.13.really./ \
 ftp://download.nvidia.com/XFree86/Linux-x86/(#WATCH_PATTERN#)/NVIDIA-Linux-x86-([\d\.\-]+)(?:-pkg0)?\.run
+opts=dversionmangle=s/.*\.really\.$//,uversionmangle=s/^/280.13.really./ \
 ftp://download.nvidia.com/XFree86/Linux-x86_64/(#WATCH_PATTERN#)/NVIDIA-Linux-x86_64-([\d\.\-]+)(?:-pkg2)?\.run
