--- a/debian/nvidia-libopencl1.lintian-overrides.in
+++ b/debian/nvidia-libopencl1.lintian-overrides.in
@@ -2,5 +2,8 @@
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 
+# There are multiple vendors providing this library.
+package-name-doesnt-match-sonames libOpenCL1
+
 # A single symbolic link does not justify the creation of a new package.
 non-dev-pkg-with-shlib-symlink
