--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -1,11 +1,20 @@
 #!/bin/bash
 # Based on http://wiki.debian.org/NvidiaGraphicsDrivers?action=AttachFile&do=view&target=nvidia-versions.sh
 
+if [ "$1" = "--help" ]; then
+	echo "Usage: nvidia-detect [PCIID]"
+	echo "       Reports the Debian packages supporting the NVIDIA GPU that is"
+	echo "       installed on the local system (or given as a PCIID parameter)."
+	exit 0
+fi
+
 shopt -s compat31 nocasematch 2>/dev/null || { echo "Error: this script only works with bash." && exit; } # Avoid cryptic failure when running dash on this script
 
 # last time the PCI IDs were updated
 LATEST="#VERSION#"
 PACKAGE=
+
+if [ -z "$1" ]; then
 
 if ! (lspci --version) > /dev/null 2>&1; then
 	echo "ERROR: The 'lspci' command was not found. Please install the 'pciutils' package." >&2
@@ -29,6 +38,19 @@ if [ "$(echo $NV_DEVICES | wc -w)" != 1 ]; then
 fi
 
 NVGA=$(lspci -mn -s ${NV_DEVICES%% *} | awk '{ gsub("\"",""); print $3 $4 }')
+
+else
+
+	PCIID=$(echo "$1" | sed -rn 's/^(10de)?:?([0-9a-fA-F]{4})$/10de\2/ip')
+	if [ -z "$PCIID" ]; then
+		echo "Error parsing PCI ID '$1'."
+		exit 1
+	fi
+
+	echo "Checking driver support for PCI ID [$(echo $PCIID | sed -r 's/(....)(....)/\1:\2/')]"
+	NVGA="$PCIID"
+
+fi
 
 IDLISTDIR=/usr/share/nvidia
 
