add some notes about the 'EQ overflowing...' error to the README
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2799 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.README.Debian.in
+++ b/debian/nvidia-glx.README.Debian.in
@@ -44,6 +44,15 @@ See /usr/share/doc/nvidia-glx#LEGACY#/README.txt.gz
 for descriptions of all supported NVIDIA driver specific options.
 
 
+NOTES ABOUT 'EQ overflowing. The server is probably stuck in an infinite loop.'
+-----------------------------------------------------------------------
+
+If you see this error in /var/log/Xorg.0.log, please ensure that the versions
+of linux-image-* and the corresponding linux-headers-* are identical up to
+the last digit.  Rebuild the module for this exactly matching kernel+header
+pair and reboot.  See http://bugs.debian.org/642497 for details.
+
+
 NOTES ABOUT XEN:
 -----------------------------------------------------------------------
 
