be a bit more strict about dkms
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2822 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -225,7 +225,7 @@ Multi-Arch: allowed
 Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
- dkms,
+ dkms (>> 2.1),
  nvidia-kernel-common (>= 20110213),
  ${misc:Depends}
 Recommends:
