--- a/debian/control
+++ b/debian/control
@@ -225,7 +225,7 @@ Multi-Arch: allowed
 Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
- dkms (>> 2.1),
+ dkms (>= 2.1),
  nvidia-kernel-common (>= 20110213),
  ${misc:Depends}
 Recommends:
