put the extra license comments into a Comment: field
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2875 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -126,7 +126,7 @@ LICENSE.txt: unpack-stamp
 
 # Compare the license in debian/copyright with the LICENSE shipped in the archive.
 compare-copyright-license: LICENSE.txt
-	sed -e '1,/^License: NVIDIA-graphics-drivers$$/d; /^$$/,$$d; /^ .$$/d' debian/copyright > copyright.tmp
+	sed -e '1,/^License: NVIDIA-graphics-drivers$$/d; 1,/^License: NVIDIA-graphics-drivers$$/d; /^$$\|^Comment:$$/,$$d; /^ .$$/d' debian/copyright > copyright.tmp
 	sed -e '/^ .$$/d' LICENSE.txt > LICENSE.tmp
 	diff -w copyright.tmp LICENSE.tmp
 	rm -f copyright.tmp LICENSE.tmp
