--- a/debian/bug-control.in
+++ b/debian/bug-control.in
@@ -1,3 +1,3 @@
-report-with: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source
+report-with: nvidia-glx#LEGACY# libgl1-nvidia#LEGACY#-glx xserver-xorg-video-nvidia#LEGACY# nvidia-alternative#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source glx-alternative-nvidia
 
-package-status: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source nvidia-kernel-common xserver-xorg xserver-xorg-core binutils binutils-gold linux-headers-2.6
+package-status: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source nvidia-glx-any libgl1-nvidia-glx-any libgl1-nvidia-glx-ia32-any xserver-xorg-video-nvidia-any nvidia-settings nvidia-xconfig nvidia-support nvidia-kernel-common xserver-xorg xserver-xorg-core linux-headers libdrm-nouveau1 libdrm-nouveau1a xserver-xorg-video-nouveau
