add Breaks against pre-multiarch libvdpau1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2918 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -313,7 +313,7 @@ Conflicts:
  nvidia-libvdpau1-driver,
  nvidia-vdpau-driver-ia32 [i386],
 Breaks:
- libvdpau1 (<< 0.4),
+ libvdpau1 (<< 0.4.1-3)
  nvidia-glx (<< 180.51),
 Replaces:
  nvidia-glx (<< 180.51),
