add changelog note about reporting bugs in backported packages to the BTS
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2920 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -347,6 +347,7 @@ prepare-squeeze-backport:
 		debian/libgl1-nvidia-glx.lintian-overrides.in
 	debchange --bpo "Disable multiarch build."
 	debchange "Reduce Build-Depends: debhelper and compat level to 8."
+	debchange "Note: Please report bugs found in this backported package to the Debian BTS, not the backports mailing list."
 
 ############################################################################
 
