--- a/debian/xserver-xorg-video-nvidia.lintian-overrides.in
+++ b/debian/xserver-xorg-video-nvidia.lintian-overrides.in
@@ -1,3 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: zlib
 embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: libpng
+hardening-no-fortify-functions
+hardening-no-relro
+hardening-no-stackprotector
