--- a/debian/libnvidia-compiler-ia32.lintian-overrides.in
+++ b/debian/libnvidia-compiler-ia32.lintian-overrides.in
@@ -4,3 +4,6 @@ embedded-library usr/lib32/libnvidia-compiler.so.#VERSION#: libm
 shlib-with-executable-stack
 shlib-with-non-pic-code
 spelling-error-in-binary
+hardening-no-fortify-functions
+hardening-no-relro
+hardening-no-stackprotector
