--- a/debian/rules
+++ b/debian/rules
@@ -126,8 +126,8 @@ LICENSE.txt: unpack-stamp
 
 # Compare the license in debian/copyright with the LICENSE shipped in the archive.
 compare-copyright-license: LICENSE.txt
-	sed -e '1,/^License: NVIDIA-graphics-drivers$$/d; 1,/^License: NVIDIA-graphics-drivers$$/d; /^$$\|^Comment:$$/,$$d; /^ .$$/d' debian/copyright > copyright.tmp
-	sed -e '/^ .$$/d' LICENSE.txt > LICENSE.tmp
+	sed -e '1,/^License: NVIDIA-graphics-drivers/d; 1,/^License: NVIDIA-graphics-drivers$$/d; /^$$\|^Comment:$$/,$$d; /^ \.$$/d' debian/copyright > copyright.tmp
+	sed -e '/^ \.$$/d' LICENSE.txt > LICENSE.tmp
 	diff -w copyright.tmp LICENSE.tmp
 	rm -f copyright.tmp LICENSE.tmp
 
