fix the prepare-squeeze-backport target
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3031 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -346,8 +346,8 @@ prepare-squeeze-backport:
 	sed -i -e '/^package-contains-empty-directory usr\/lib\/tls\// s/^/#/' \
 		debian/libgl1-nvidia-glx.lintian-overrides.in
 	debchange --bpo "Disable multiarch build."
-	debchange "Reduce Build-Depends: debhelper and compat level to 8."
-	debchange "Note: Please report bugs found in this backported package to the Debian BTS, not the backports mailing list."
+	debchange -a "Reduce Build-Depends: debhelper and compat level to 8."
+	debchange -a "Note: Please report bugs found in this backported package to the Debian BTS, not the backports mailing list."
 
 ############################################################################
 
