wheezy does not have legacy 96xx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3122 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -155,8 +155,7 @@ fi
 			echo "Your card is only supported up to the 173.14 legacy drivers series.";
 			PACKAGE="nvidia-glx-legacy-173xx"
 		elif [[ -n ${VERSIONS[96]} ]]; then
-			echo "Your card is only supported up to the 96.43 legacy drivers series.";
-			PACKAGE="nvidia-glx-legacy-96xx"
+			echo "Uh oh. Your card is only supported up to the 96.43 legacy drivers series, which is no longer usable due to lack of support for current Xorg Xserver 1.12";
 		else
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite.";
 		fi;
